--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="hero-body hero-background">
     <div class="hero-container">
-        <h1 class="hero-visually-hidden">hidden</h1>
+        <h1 class="hero-visually-hidden">Hidden</h1>
         <h2 class="hero-text">Treat yourself or a loved one
             to our finest ingredients for a moment of pure delight!</h2>
         <div class="hero-tablet">
