--- a/src/css/how-its-made.css
+++ b/src/css/how-its-made.css
@@ -1,30 +1,7 @@
 /* oprócz klasy .how-its-made pozostałe style rozpoczynają się od .how- */
-/*
 
 
-  display: flex;
-  width: 1136px;
-  height: 478px;
-  flex-direction: column;
-  align-items: center;
-  gap: 50px;
-  flex-shrink: 0;
-}
-.how-title {
-  text-align: center;
-  line-height: 1.16;
-  letter-spacing: -0.72px;
-  text-transform: uppercase;
-}
-span .accent{
-line-height: 28px;
-letter-spacing: -0.72px;
-text-transform: uppercase;
-}
-picture {
-border-radius: 15px;
 
-}*/
 /*====== mobile version ====== */
 .how-container {
   min-width: 335px;
@@ -57,6 +34,7 @@ iframe {
   border-width: 0px;
 }
 
+
 .how-video {
   width: 100%;
   height: 500px;
@@ -72,7 +50,7 @@ iframe {
 .how-recipe-title {
   font-weight: 600;
   font-size: 18px;
-  margin-bottom: ;
+  margin-bottom: 0;
   line-height: 1.33;
 }
 
@@ -87,6 +65,7 @@ iframe {
   letter-spacing: -0.02em;
   margin-bottom: 18px;
   display: flex;
+  list-style-type: circle;
 }
 .how-list-text:nth-child(-n + 1) {
   margin-bottom: 0px;
@@ -182,4 +161,5 @@ iframe {
   .how-text:nth-child(1) {
     display: none;
   }
+  
 } 
