--- a/src/css/how-its-made.css
+++ b/src/css/how-its-made.css
@@ -1,18 +1,13 @@
 /* oprócz klasy .how-its-made pozostałe style rozpoczynają się od .how- */
 
-
-
 /*====== mobile version ====== */
 .how-container {
-  min-width: 335px;
-  width: 100%;
   padding: 0px 20px;
   margin: 0px auto;
 }
 
 .how-section {
   padding-bottom: 72px;
-  background-color: var(--WHITE);
 }
 
 .how-description {
@@ -22,12 +17,7 @@
 }
 
 .how-title {
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 20px;
   margin-bottom: 32px;
-  letter-spacing: -0.03em;
-  line-height: calc(24/20);
 }
 
 iframe {
@@ -40,8 +30,8 @@ iframe {
   height: 500px;
   border-radius: 15px;
   margin-bottom: 20px;
-  /*background: ;*/
 }
+
 
 .how-list {
   width: 100%;
@@ -65,9 +55,12 @@ iframe {
   letter-spacing: -0.02em;
   margin-bottom: 18px;
   display: flex;
-  list-style-type: circle;
+  display: flex;
+   flex-direction: column;
+   gap: 18px;
+   margin-left: 20px;
 }
-.how-list-text:nth-child(-n + 1) {
+.how-text:nth-child(-n + 1) {
   margin-bottom: 0px;
 }
 
@@ -84,7 +77,7 @@ iframe {
 /*====== tablet version ======*/
 @media screen and (min-width: 768px){
   .how-container {
-    width: 768px;
+   
     padding-left: 77px;
     padding-right: 77px;
   }
@@ -98,9 +91,6 @@ iframe {
   }
 
   .how-title {
-    font-size: 24px;
-    line-height: calc(28/24);
-    text-transform: uppercase;
     margin-bottom: 50px;
   }
 
@@ -117,21 +107,24 @@ iframe {
     display: flex;
   }
 
-  .how--list-text {
+  .how-list-text {
     width: 464px;
+    margin-bottom: 18px;
   }
 }
 
 /* ====== desktop version ======*/
 @media screen and (min-width: 1200px) {
   .how-conteiner {
-    width: 1200px;
-    padding-left:32px;
+    padding-left: 32px;
     padding-right: 32px;
   }
   
   .how-section {
     padding-bottom: 128px;
+  }
+  .how-title {
+    margin-bottom: 50px;
   }
 
   .how-description {
@@ -141,6 +134,7 @@ iframe {
 
   .how-content {
     display: flex;
+    flex-direction: row;
     gap: 20px;
   }
 
@@ -155,11 +149,11 @@ iframe {
 
   .how-list-text {
     width: 452px;
-    margin-bottom: 0px;
+    margin-bottom: 24px;
   }
 
   .how-text:nth-child(1) {
     display: none;
   }
-  
-} 
+}
+
