--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,19 +1,22 @@
 <section id="how-its-made" class="how-section">
+  <a name="How-its-made"></a>
   <div class="container how-container">
     <h2 class="section-title how-title">HOW IT'S <span class="accent">MADE?</span></h2>
     <div class="how-content">
     <!--<iframe class="how-box-video"
-        class="h-i-m-video"
+        class="how-video"
         src="https://www.youtube.com/embed/_5ja7UNHZpo?start=23&fs=0&modestbranding=1&controls=2&showinfo=0"
         title="YouTube video player"
         frameborder="0">
       </iframe>-->
-      <picture>
-        <img src="./images/how-its-made/des-how-its-made-600x400.jpg"/>
-        <svg class="how-icon" width="44" height="44">
-          <use href="./images/icons.svg#play"/>
-        </svg>
-      </picture>
+      <div class="how-video">
+        <picture>
+          <img src="./images/how-its-made/des-how-its-made-600x400.jpg"/>
+         <svg class="how-icon" width="44" height="44">
+            <use href="./images/icons.svg#play"/>
+          </svg>
+        </picture>
+      </div>
       <div class="how-description">
         <h3 class="how-recipe-title">Try our chocolates today and <br/>discover the perfect balance of flavor</h3>
         <ul class="how-list">
